--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-        <title>Jami Muhonen</title>
-    </head>
-    <body>
-        <h1>Tervetuloa minun sivuilleni!</h1>
-        <p>Utelijas tutkiskelija.</p>
-        <img src="C:\Users\jamim\Desktop\Opiskelu\Websivusto_Syksy25\WS01_HTML\WhatsApp Image 2025-10-04 at 14.14.26_f59dcdc5.jpg" alt="Tässä on kuva minusta.">
-    </body>
-    </html>
+<html lang="fi">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tervetuloa minun sivuilleni!</title>
+</head>
+<body>
+    <h1>Jami</h1>
+    <p>Utelijas tutkiskelija.</p>
+    <img src="Jami_30.10.jpg" alt="Mie_ihan_ite">
 
     <h2>Harrastuksiini kuuluvat</h2>
     <ul>
@@ -18,3 +18,32 @@
     </ul>
 
     <a href="https://www.youtube.com/">YouTube</a>
+
+    <table>
+        <tr>
+            <th>Lemppari pelit</th>
+            <th>Lemppari musiikki genret</th>
+        </tr>
+        <tr>
+            <td>Counter Strike 2</td>
+            <td>Alternative metal</td>
+        </tr>
+        <tr>
+            <td>League of Legends</td>
+            <td>Rap</td>
+        </tr>
+        <tr>
+            <td>Dota 2</td>
+            <td>Hardstyle</td>
+        </tr>
+    </table>
+
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br><br>
+        <input type="submit" value="Submit">
+    </form>
+</body>
+</html>
