--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fi">
 <head>
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
 <body>
     <h1>Jami</h1>
     <p>Utelijas tutkiskelija.</p>
-    <img src="Jami_30.10.jpg" alt="Mie_ihan_ite">
+    <img src="images/Jami_30.10.jpg" alt="Mie_ihan_ite">
 
     <h2>Harrastuksiini kuuluvat</h2>
     <ul>
