CSS aloitus kommit

--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tervetuloa minun sivuilleni!</title>
+    <style>
+    h1 {
+      color: rgb(12, 176, 241);
+    }
+    </style>
 </head>
 <body>
     <h1>Jami</h1>
