--- a/WS02_CSS/index.html
+++ b/WS02_CSS/index.html
@@ -1,11 +1,54 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WS02_CSS</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tervetuloa minun sivuilleni!</title>
+    <style>
+    h1 {
+      color: rgb(12, 176, 241);
+    }
+    </style>
 </head>
 <body>
-    <h1>WS02_CSS</h1>
+    <h1>Jami</h1>
+    <p>Utelijas tutkiskelija.</p>
+    <img src="images/Jami_30.10.jpg" alt="Mie_ihan_ite">
+
+    <h2>Harrastuksiini kuuluvat</h2>
+    <ul>
+        <li>Pelaaminen</li>
+        <li>Moottorikulkuneuvot</li>
+        <li>Musiikki</li>
+    </ul>
+
+    <a href="https://www.youtube.com/">YouTube</a>
+
+    <table>
+        <tr>
+            <th>Lemppari pelit</th>
+            <th>Lemppari musiikki genret</th>
+        </tr>
+        <tr>
+            <td>Counter Strike 2</td>
+            <td>Alternative metal</td>
+        </tr>
+        <tr>
+            <td>League of Legends</td>
+            <td>Rap</td>
+        </tr>
+        <tr>
+            <td>Dota 2</td>
+            <td>Hardstyle</td>
+        </tr>
+    </table>
+
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br><br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
