Perus CSS viimeistely

--- a/WS02_CSS/index.html
+++ b/WS02_CSS/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tervetuloa minun sivuilleni!</title>
-    <style>
-    h1 {
-      color: rgb(12, 176, 241);
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
     <h1>Jami</h1>
