Advanced CSS aloitus

--- a/WS02_CSS/index.html
+++ b/WS02_CSS/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tervetuloa minun sivuilleni!</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+   
+   <style>
+    h1 {
+      color: green;
+    }
+    </style>
+    
 </head>
 <body>
-    <h1>Jami</h1>
+   <h1 style="color: red;">Jami</h1>
     <p>Utelijas tutkiskelija.</p>
     <img src="images/Jami_30.10.jpg" alt="Mie_ihan_ite">
 
