--- a/WS03_CSS_Advance/index.html
+++ b/WS03_CSS_Advance/index.html
@@ -1,57 +1,70 @@
 ﻿<!DOCTYPE html>
 <html lang="fi">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tervetuloa minun sivuilleni!</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
 
     <style>
-    h1 {
-      color: green;
-    }
+      h1 {
+        color: green;
+      }
     </style>
-
+  
 </head>
-<body>
-    <h1 style="color: red;">Jami</h1>
+
+  <body>
+    <button class="transition-button">Hover me</button>
+    <div class="animation-box"></div>
+    <h1 style="color: red">Jami</h1>
     <p>Utelijas tutkiskelija.</p>
-    <img src="images/Jami_30.10.jpg" alt="Mie_ihan_ite">
+    <img src="images/Jami_30.10.jpg" alt="Mie_ihan_ite" class="filter-image" />
+    <blockquote class="quote">
+        Tukka takana, elämä edessä
+      </blockquote>
+
+    <ul class="pseudo-list">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+      </ul>
 
     <h2>Harrastuksiini kuuluvat</h2>
     <ul>
-        <li>Pelaaminen</li>
-        <li>Moottorikulkuneuvot</li>
-        <li>Musiikki</li>
+      <li>Pelaaminen</li>
+      <li>Moottorikulkuneuvot</li>
+      <li>Musiikki</li>
     </ul>
 
     <a href="https://www.youtube.com/">YouTube</a>
 
     <table>
-        <tr>
-            <th>Lemppari pelit</th>
-            <th>Lemppari musiikki genret</th>
-        </tr>
-        <tr>
-            <td>Counter Strike 2</td>
-            <td>Alternative metal</td>
-        </tr>
-        <tr>
-            <td>League of Legends</td>
-            <td>Rap</td>
-        </tr>
-        <tr>
-            <td>Dota 2</td>
-            <td>Hardstyle</td>
-        </tr>
+      <tr>
+        <th>Lemppari pelit</th>
+        <th>Lemppari musiikki genret</th>
+      </tr>
+      <tr>
+        <td>Counter Strike 2</td>
+        <td>Alternative metal</td>
+      </tr>
+      <tr>
+        <td>League of Legends</td>
+        <td>Rap</td>
+      </tr>
+      <tr>
+        <td>Dota 2</td>
+        <td>Hardstyle</td>
+      </tr>
     </table>
 
     <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
-        <input type="submit" value="Submit">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" /><br /><br />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" /><br /><br />
+      <input type="submit" value="Submit" />
     </form>
-</body>
+  </body>
 </html>
