--- a/WS04_Layout/index.html
+++ b/WS04_Layout/index.html
@@ -11,8 +11,7 @@
         color: green;
       }
     </style>
-  
-</head>
+  </head>
 
   <body>
     <nav>
@@ -23,84 +22,83 @@
       </ul>
     </nav>
     <header>
-
-    <button class="transition-button">Hover me</button>
-    <div class="animation-box"></div>
-    <h1 style="color: red">Jami</h1>
-    <p>Utelijas tutkiskelija.</p>
-    <img src="images/Jami_30.10.jpg" alt="Mie_ihan_ite" class="filter-image" />
-    <blockquote class="quote">
-        Tukka takana, elämä edessä
-      </blockquote>
+      <button class="transition-button">Hover me</button>
+      <div class="animation-box"></div>
+      <h1 style="color: red">Jami</h1>
+      <p>Utelijas tutkiskelija.</p>
+      <img
+        src="images/Jami_30.10.jpg"
+        alt="Mie_ihan_ite"
+        class="filter-image"
+      />
+      <blockquote class="quote">Tukka takana, elämä edessä</blockquote>
     </header>
-    
+
     <main>
-    <ul class="pseudo-list">
+      <ul class="pseudo-list">
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
         <li>Item 4</li>
       </ul>
-<section id="about">
-    <h2>Harrastuksiini kuuluvat</h2>
-    <ul>
-      <li>Pelaaminen</li>
-      <li>Moottorikulkuneuvot</li>
-      <li>Musiikki</li>
-    </ul>
+      <section id="about">
+        <h2>Harrastuksiini kuuluvat</h2>
+        <ul>
+          <li>Pelaaminen</li>
+          <li>Moottorikulkuneuvot</li>
+          <li>Musiikki</li>
+        </ul>
 
-    <a href="https://www.youtube.com/">YouTube</a>
+        <a href="https://www.youtube.com/">YouTube</a>
 
-    <table>
-      <tr>
-        <th>Lemppari pelit</th>
-        <th>Lemppari musiikki genret</th>
-      </tr>
-      <tr>
-        <td>Counter Strike 2</td>
-        <td>Alternative metal</td>
-      </tr>
-      <tr>
-        <td>League of Legends</td>
-        <td>Rap</td>
-      </tr>
-      <tr>
-        <td>Dota 2</td>
-        <td>Hardstyle</td>
-      </tr>
-    </table>
-</section>
-<section id="services">
-    <div class="flex-container">
-    <div class="box">Box 1</div>
-    <div class="box">Box 2</div>
-    <div class="box">Box 3</div>
-  </div>
-  <div class="grid-container">
-    <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>
-  </div>
-  <div class="responsive-box">Resize the window to see the effect</div>
-</section>
-
-    <form>
-      <section id="contact">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" /><br /><br />
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" /><br /><br />
-      <input type="submit" value="Submit" />
+        <table>
+          <tr>
+            <th>Lemppari pelit</th>
+            <th>Lemppari musiikki genret</th>
+          </tr>
+          <tr>
+            <td>Counter Strike 2</td>
+            <td>Alternative metal</td>
+          </tr>
+          <tr>
+            <td>League of Legends</td>
+            <td>Rap</td>
+          </tr>
+          <tr>
+            <td>Dota 2</td>
+            <td>Hardstyle</td>
+          </tr>
+        </table>
       </section>
-    </form>
+      <section id="services">
+        <div class="flex-container">
+          <div class="box">Box 1</div>
+          <div class="box">Box 2</div>
+          <div class="box">Box 3</div>
+        </div>
+        <div class="grid-container">
+          <div class="grid-item">1</div>
+          <div class="grid-item">2</div>
+          <div class="grid-item">3</div>
+          <div class="grid-item">4</div>
+          <div class="grid-item">5</div>
+          <div class="grid-item">6</div>
+        </div>
+        <div class="responsive-box">Resize the window to see the effect</div>
+      </section>
 
+      <form>
+        <section id="contact">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" /><br /><br />
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" /><br /><br />
+          <input type="submit" value="Submit" />
+        </section>
+      </form>
     </main>
     <footer>
-    <p>Copyright 2025</p>
-  </footer>
+      <p>Copyright 2025</p>
+    </footer>
   </body>
-
 </html>
