Projektin kuva lisäys

--- a/WS07_Projektityo/index.html
+++ b/WS07_Projektityo/index.html
@@ -367,7 +367,7 @@
                 <h2>Keskeiset Ominaisuudet</h2>
                 <div class="card-grid">
                     <div class="card">
-                        <h3>160+ Sankaria</h3>
+                        <h3>170+ Sankaria</h3>
                         <p>Valtava valikoima pelattavia hahmoja, joilla on ainutlaatuiset kyvyt ja taustatarinat.</p>
                     </div>
                     <div class="card">
@@ -408,7 +408,7 @@
         <main>
             <div class="content-section">
                 <h2>Sankarit League of Legendsissa</h2>
-                <p>League of Legends sisältää yli 160 ainutlaatuista sankaria, joista jokainen tarjoaa oman pelityylinsä ja strategiansa. Sankarit jaetaan eri rooleihin ja luokkiin perustuen heidän kykyihinsä ja pelityyliinsä.</p>
+                <p>League of Legends sisältää yli 170 ainutlaatuista sankaria, joista jokainen tarjoaa oman pelityylinsä ja strategiansa. Sankarit jaetaan eri rooleihin ja luokkiin perustuen heidän kykyihinsä ja pelityyliinsä.</p>
                 
                 <div class="champion-images">
                     <div class="champion-img">
@@ -431,27 +431,22 @@
                 <div class="card-grid">
                     <div class="champion-card">
                         <h3>Assassin</h3>
-                        <span class="role-badge">Salamurhaamat</span>
                         <p>Nopeat ja ketterät sankarit, jotka erikoistuvat yksittäisten kohteiden tuhoamiseen. Esimerkiksi: Zed, Akali, Katarina, Talon.</p>
                     </div>
                     <div class="champion-card">
                         <h3>Mage</h3>
-                        <span class="role-badge">Taikurit</span>
                         <p>Loitsuvoimaa käyttävät sankarit, jotka aiheuttavat valtavia vahinkoja taikuudella. Esimerkiksi: Lux, Ahri, Syndra, Orianna.</p>
                     </div>
                     <div class="champion-card">
                         <h3>Tank</h3>
-                        <span class="role-badge">Tankki</span>
                         <p>Kestävät sankarit, jotka suojelevat tiimiään ja ottavat vahinkoa vastaan. Esimerkiksi: Malphite, Ornn, Sion, Maokai.</p>
                     </div>
                     <div class="champion-card">
                         <h3>Bruiser</h3>
-                        <span class="role-badge">Soturi</span>
                         <p>Tasapainoinen yhdistelmä vahinkoa ja kestävyyttä lähitaistelussa. Esimerkiksi: Darius, Garen, Jax, Irelia.</p>
                     </div>
                     <div class="champion-card">
                         <h3>Support</h3>
-                        <span class="role-badge">Tuki</span>
                         <p>Sankarit, jotka auttavat ja vahvistavat tiimitovereitaan sekä suojelevat heitä. Esimerkiksi: Thresh, Lulu, Soraka, Leona.</p>
                     </div>
                 </div>
@@ -461,7 +456,7 @@
                 <h2>Sankarien Valinta</h2>
                 <p>Oikean sankarin valinta riippuu monista tekijöistä:</p>
                 <ul>
-                    <li><strong>Pelityyli:</strong> Pidätkö aggressiivisesta vai puolustavasta pelaamisesta?</li>
+                    <li><strong>Pelityyli:</strong> Oletko hyökkäävä vai puolustava pelaaja?</li>
                     <li><strong>Rooli:</strong> Mikä positio tiimissä sinua kiinnostaa?</li>
                     <li><strong>Vaikeustaso:</strong> Aloittelijoille suositellaan yksinkertaisempia sankareita</li>
                     <li><strong>Tiimin koostumus:</strong> Sankarien tulee täydentää toisiaan</li>
@@ -648,7 +643,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 League of Legends Fan-sivu. Ei virallinen Riot Games -sivusto.</p>
+        <p>&copy; 2025 League of Legends Fan-sivu. Ei virallinen Riot Games -sivusto.</p>
         <p>League of Legends ja Riot Games ovat Riot Games, Inc:n tavaramerkkejä.</p>
     </footer>
 
