--- a/WS07_Projektityo/index.html
+++ b/WS07_Projektityo/index.html
@@ -393,7 +393,7 @@
                 <h3>ARAM (All Random All Mid)</h3>
                 <p>Nopeatempoisempi pelimuoto, jossa pelaajat saavat satunnaisen sankarin ja taistelevat yhdellä linjalla.</p>
                 
-                <h3>Rankkapeli</h3>
+                <h3>Ranked</h3>
                 <p>Kilpailullinen pelimuoto, jossa pelaajat voivat nousta eri divisioonien läpi osoittaakseen taitojaan.</p>
             </div>
         </main>
@@ -412,17 +412,26 @@
                 
                 <div class="champion-images">
                     <div class="champion-img">
-                        <span>Yasuo - Tuulen Vartija</span>
+                        <img src="images/katarina.jpg" alt="Katarina" style="width: 240px; height: 240px; object-fit: cover;">
+                        <span>Katarina - Mid</span>
                     </div>
                     <div class="champion-img">
-                        <span>Ahri - Yhdeksänhäntäinen Kettu</span>
+                        <img src="images/gragas.jpg" alt="Gragas - Top" style="width: 240px; height: 240px; object-fit: cover;">
+                        <span>Gragas - Top</span>
                     </div>
                     <div class="champion-img">
-                        <span>Jinx - Löysä Kanuuna</span>
+                        <img src="images/shaco2.jpg" alt="Shaco - Jungle" style="width: 240px; height: 240px; object-fit: cover;">
+                        <span>Shaco - Jungle</span>
                     </div>
                     <div class="champion-img">
-                        <span>Lee Sin - Sokea Munkki</span>
+                        <img src="images/jhin2.webp" alt="Jhin - Bot" style="width: 240px; height: 240px; object-fit: cover;">
+                        <span>Jhin - Bot</span>
                     </div>
+                    <div class="champion-img">
+                        <img src="images/thresh.webp" alt="Thresh - Support" style="width: 240px; height: 240px; object-fit: cover;">
+                        <span>Thresh - Support</span>
+                    </div>
+                    <p>Tässä omat suosikki hahmot, joita käytän mieluiten kyseisissä rooleissa.</p>
                 </div>
             </div>
 
@@ -602,18 +611,18 @@
 
             <div class="content-section">
                 <h2>Historialliset Turnaushetket</h2>
-                <div class="champion-images">
-                    <div class="tournament-img">
-                        <span>2019 Worlds Finals - Pariisi<br>Vastaanottorakennus Accor Arena</span>
-                    </div>
-                    <div class="tournament-img">
-                        <span>2021 Worlds Finals - Reykjavik<br>EDG vs DK Finaalit</span>
-                    </div>
-                    <div class="tournament-img">
-                        <span>MSI 2019 - Taipei<br>G2 Esports Historian Voitto</span>
-                    </div>
-                    <div class="tournament-img">
-                        <span>2023 Worlds Finals - Seoul<br>Kotiyleisö Kannustaa T1:tä</span>
+                <div class="tournament-images">
+                <div class="tournament-img-container">
+                    <img src="images/worlds-arena.jpg.jpg" alt="League of Legends World Championship areenan näkymä täynnä katsojia" class="tournament-photo">
+                    <p class="img-caption">World Championship -areena täynnä faneja</p>
+                </div>
+                <div class="tournament-img-container">
+                    <img src="images/worlds-stage.jpg.png" alt="League of Legends turnauksen pääscene valtavilla näytöillä" class="tournament-photo">
+                    <p class="img-caption">Worlds-turnauksen mahtava näyttämö ja peliruudut</p>
+                </div>
+                <div class="tournament-img-container">
+                    <img src="images/worlds-champions.jpg.jpeg" alt="Voittajajoukkue nostaa mestaruuspokaalia" class="tournament-photo">
+                    <p class="img-caption">Mestaruuden hetki</p>
                     </div>
                 </div>
             </div>
@@ -621,10 +630,10 @@
             <div class="content-section">
                 <h2>Alueelliset Liigat</h2>
                 <h3>LCK - League of Legends Champions Korea</h3>
-                <p>Korealainen liiga tunnetaan korkeasta taitotasostaan ja strategisesta pelaamisestaan. Moni maailman parhaista pelaajista on kotoisin LCK:sta.</p>
+                <p>Korealainen liiga tunnetaan korkeasta taitotasostaan ja strategisesta pelaamisestaan. Moni maailman parhaista pelaajista on kotoisin Koreasta.</p>
 
                 <h3>LPL - League of Legends Pro League</h3>
-                <p>Kiinan liiga on kasvanut maailman vahvimmaksi alueeksi. LPL-joukkueet ovat voittaneet useita viimeaikaisia World Championship -titteleitä.</p>
+                <p>Kiinan liiga on kasvanut maailman vahvimmaksi. LPL-joukkueet ovat voittaneet useita viimeaikaisia World Championship -titteleitä.</p>
 
                 <h3>LEC - League of Legends EMEA Championship</h3>
                 <p>Euroopan liiga yhdistää pelaajia Euroopasta, Lähi-idästä ja Afrikasta. Tunnettu luovasta pelityylistään ja vahvasta fanien tuesta.</p>
